# set-crafter

./: .gitignore  README.md  ops.py  pyproject.toml  requirements.txt  setup.py
ansible/: ansible.cfg  requirements.yml
ansible/group_vars/: all.yml
ansible/playbooks/: configure.yml  deploy.yml  provision.yml
ansible/templates/: set-crafter-api.env.j2
environments/production/: .env.example  terraform.tfvars.json
src/: analyze_bpm.py  api.py  api_client.py  bandcamp_user.py  client.py  error_log.txt  recommend_tracks.py  set.py  utils.py
src/set_crafter/: analyze_bpm.py  api.py  bandcamp_user.py  client.py  constants.py  recommend_tracks.py  schemas.py  set.py  utils.py
src/set_crafter.egg-info/: PKG-INFO  SOURCES.txt
tasks/: todo.md
terraform/: dns.tf  main.tf  outputs.tf  shared-server.tf  variables.tf
web/: .cursorrules  README.org  astro.config.mjs  biome.json  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
web/src/: App.js  SetlistCreator.js  globals.css  types.ts
web/src/components/: Checkbox.astro  Crafter.astro  Crafter.tsx
web/src/components/ui/: button.tsx
web/src/lib/: api.ts
web/src/pages/: index.astro
