[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "set-crafter"
version = "0.1.0"
description = "DJ set crafter — bandcamp recommendations with BPM-aware filtering"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Pim Meerdink", email = "pim@socialtechnologylab.nl" }]
dependencies = [
    "aiohttp==3.8.4",
    "beautifulsoup4==4.12.2",
    "demjson3",
    "fastapi==0.95.2",
    "librosa==0.10.0",
    "lxml",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "pydantic==1.10.7",
    "pydub==0.25.1",
    "requests",
    "scipy<1.13",
    # pydub imports pkg_resources, which was removed in setuptools 81
    "setuptools<81",
    "urllib3==1.26.15",
    "uvicorn",
]

[tool.hatch.build.targets.wheel]
packages = ["src/set_crafter"]

[tool.uv]
package = true
